--- a/case_0.1_student/case_0.1_student.ipynb
+++ b/case_0.1_student/case_0.1_student.ipynb
@@ -150,9 +150,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer.**\n",
-    "\n",
-    "-----"
+    "**Answer.**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It took a few minutes. "
    ]
   },
   {
@@ -191,9 +196,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-17T17:55:43.442003Z",
+     "start_time": "2020-10-17T17:55:43.352887Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'IFrame' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-9317ded01e54>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mIFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'https://www.youtube.com/embed/g8xQRI3E8r8'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m550\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'IFrame' is not defined"
+     ]
+    }
+   ],
    "source": [
     "IFrame('https://www.youtube.com/embed/g8xQRI3E8r8', width=550, height=300)"
    ]
@@ -209,9 +231,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-17T17:56:48.222304Z",
+     "start_time": "2020-10-17T17:56:48.219042Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n"
+     ]
+    }
+   ],
    "source": [
     "print (\"Hello world\")"
    ]
@@ -299,6 +334,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Bold"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -323,7 +367,7 @@
     "\n",
     "The syntax for including images in Markdown is:\n",
     "\n",
-    "<img src=\"data/images/image_ad.PNG\" alt=\"drawing\" width=\"250\" height=\"150\"/>\n",
+    "<img src=\"data/images/image_ad.PNG\" alt=drawing  width=\"250\" height=\"150\"/>\n",
     "\n",
     "where `name` refers to the name of the image you want to give it. This will appear in case the image cannot be loaded and the address can refer to a local image or a link on the Internet."
    ]
@@ -387,6 +431,15 @@
     "| This | is   |  a   |table |\n",
     "|------|------|------|------|\n",
     "|   a  | b    |  c   |  d   |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|a|b|c|d|e|f|g|\n",
+    "|-|-|-|-|-|-|-|\n",
+    "|1|2|3|4|5|6|7"
    ]
   },
   {
@@ -771,7 +824,7 @@
     "instance",
     "_Feature"
    ],
-   "window_display": false
+   "window_display": true
   }
  },
  "nbformat": 4,
