--- a/case_0.2_student/case_0.2_student.ipynb
+++ b/case_0.2_student/case_0.2_student.ipynb
@@ -107,9 +107,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.423833Z",
+     "start_time": "2020-10-27T19:21:10.420445Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "#This is an example\n",
     "variable_1 = 10\n",
@@ -128,7 +141,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.428445Z",
+     "start_time": "2020-10-27T19:21:10.425836Z"
+    }
+   },
    "outputs": [],
    "source": [
     "num_argentina = 450\n",
@@ -156,7 +174,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.433427Z",
+     "start_time": "2020-10-27T19:21:10.430135Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -212,7 +235,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.438028Z",
+     "start_time": "2020-10-27T19:21:10.434894Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -256,9 +284,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.443834Z",
+     "start_time": "2020-10-27T19:21:10.439896Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peru: 879\n",
+      "Croatia 125.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's add two new countries and the number of travelers who went to those specific countries:\n",
     "peru = int (879)\n",
@@ -284,18 +326,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.454971Z",
+     "start_time": "2020-10-27T19:21:10.445531Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(peru)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.460715Z",
+     "start_time": "2020-10-27T19:21:10.456686Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(croatia)"
    ]
@@ -327,8 +401,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.467195Z",
+     "start_time": "2020-10-27T19:21:10.462308Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -343,7 +422,7 @@
        "complex"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,9 +448,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.475441Z",
+     "start_time": "2020-10-27T19:21:10.469817Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Countries\n",
+      "Travelers\n"
+     ]
+    }
+   ],
    "source": [
     "destiny =\"Countries\"\n",
     "clients ='Travelers'\n",
@@ -389,27 +482,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.481561Z",
+     "start_time": "2020-10-27T19:21:10.478454Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome Travelers we hope you have lots of fun in all the Countries you want to visit!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Welcome\", clients, \"we hope you have lots of fun in all the\", destiny, \"you want to visit!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.486881Z",
+     "start_time": "2020-10-27T19:21:10.483056Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(clients)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.491941Z",
+     "start_time": "2020-10-27T19:21:10.488719Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome\n",
+      "back\n",
+      "dear\n",
+      "travelers\n"
+     ]
+    }
+   ],
    "source": [
     "#We can create a new variable that includes a multiline text.\n",
     "\n",
@@ -440,8 +578,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.497251Z",
+     "start_time": "2020-10-27T19:21:10.493469Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -466,8 +609,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.503758Z",
+     "start_time": "2020-10-27T19:21:10.499262Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -494,9 +642,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.509797Z",
+     "start_time": "2020-10-27T19:21:10.505875Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "<class 'bool'>\n",
+      "False\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
    "source": [
     "# We can create a boolean variable with the value we want, True or False\n",
     "\n",
@@ -520,9 +684,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.516784Z",
+     "start_time": "2020-10-27T19:21:10.511981Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "NoneType"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "null_variable = None\n",
     "\n",
@@ -539,9 +726,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:21:10.523721Z",
+     "start_time": "2020-10-27T19:21:10.518645Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None None None\n"
+     ]
+    }
+   ],
    "source": [
     "uk = None\n",
     "poland = None\n",
@@ -751,7 +951,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": true
   }
  },
  "nbformat": 4,
