travel agengy exercises finished

--- a/case_0.2_student/case_0.2_student.ipynb
+++ b/case_0.2_student/case_0.2_student.ipynb
@@ -140,18 +140,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-27T19:21:10.428445Z",
-     "start_time": "2020-10-27T19:21:10.425836Z"
+     "end_time": "2020-10-27T19:24:26.013827Z",
+     "start_time": "2020-10-27T19:24:26.001421Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Congo: 230 \n",
+      " Egypt: 1200 \n",
+      " South Africa: 760\n",
+      " Indonesia:  790 \n",
+      " Israel: 420 \n",
+      " Thailand:  400\n",
+      " Spain 890 \n",
+      " Greece: 550 \n",
+      " Iceland: 380\n",
+      " Canada 400 \n",
+      " Mexico: 750 \n",
+      " United States: 990\n",
+      " Australia: 350 \n",
+      " Fiji: 80 \n",
+      " Argentina: 450 \n",
+      " Brazil: 650 \n",
+      " Colombia: 320\n"
+     ]
+    }
+   ],
    "source": [
-    "num_argentina = 450\n",
-    "num_australia = 350\n",
-    "num_brazil = 650"
+    "congo = 230\n",
+    "egypt = 1200\n",
+    "south_africa = 760\n",
+    "indonesia = 790\n",
+    "israel = 420\n",
+    "thailand = 400 \n",
+    "spain = 890\n",
+    "greece = 550\n",
+    "iceland = 380\n",
+    "canada = 400\n",
+    "mexico = 750\n",
+    "united_states = 990 \n",
+    "australia = 350\n",
+    "fiji = 80\n",
+    "argentina = 450\n",
+    "brazil = 650\n",
+    "colombia = 320\n",
+    "print(\" Congo:\", congo, \"\\n\", \"Egypt:\", egypt,\"\\n\", \"South Africa:\", south_africa)\n",
+    "print(\" Indonesia: \", indonesia, \"\\n\", \"Israel:\", israel, \"\\n\", \"Thailand: \", thailand)\n",
+    "print(\" Spain\", spain, \"\\n\", \"Greece:\", greece,\"\\n\", \"Iceland:\", iceland)\n",
+    "print(\" Canada\", canada, \"\\n\",\"Mexico:\", mexico,\"\\n\",\"United States:\",united_states)\n",
+    "print(\" Australia:\", australia, \"\\n\", \"Fiji:\", fiji, \"\\n\", \"Argentina:\", \n",
+    "      argentina, \"\\n\", \"Brazil:\", brazil, \"\\n\", \"Colombia:\", colombia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:24:47.884674Z",
+     "start_time": "2020-10-27T19:24:47.879770Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "congo, egypt, south_africa = 230, 1200, 760\n",
+    "indonesia, israel, thailand = 790, 420, 400\n",
+    "spain, greece, iceland =  890, 550, 380\n",
+    "canada, mexico, united_states = 400, 750, 990 \n",
+    "australia, fiji = 350, 80\n",
+    "argentina, brazil, colombia = 450, 650, 320\n",
+    "#To prove that this is right, we can find the number of tourists for any yof these countries. Let's find Thailand: \n",
+    "print(thailand)"
    ]
   },
   {
@@ -173,11 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-27T19:21:10.433427Z",
-     "start_time": "2020-10-27T19:21:10.430135Z"
+     "end_time": "2020-10-27T19:25:11.177466Z",
+     "start_time": "2020-10-27T19:25:11.173932Z"
     }
    },
    "outputs": [
@@ -185,12 +258,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "650\n"
+      "Greece 550\n",
+      "The number of tourists in Greece last year was 550 people\n"
      ]
     }
    ],
    "source": [
-    "print(num_brazil)"
+    "print(\"Greece\", greece)\n",
+    "# If you want a more clear message, you can add words so your output makes more sense: \n",
+    "print(\"The number of tourists in Greece last year was\", greece, \"people\")"
    ]
   },
   {
@@ -234,25 +310,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-27T19:21:10.438028Z",
-     "start_time": "2020-10-27T19:21:10.434894Z"
+     "end_time": "2020-10-27T19:25:27.840924Z",
+     "start_time": "2020-10-27T19:25:27.836616Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1450\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1370"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "total = num_argentina + num_australia + num_brazil\n",
-    "print(total)"
+    "# We can obtaint the result by adding the variables\n",
+    "congo + australia + indonesia\n"
    ]
   },
   {
@@ -268,10 +347,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:26:09.121304Z",
+     "start_time": "2020-10-27T19:26:09.117057Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Oceania= 430 \n",
+      " South America= 1420\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can create variables to get the result we're looking for\n",
+    "oceania = australia + fiji\n",
+    "south_america = argentina + brazil + colombia\n",
+    "print(\" Oceania=\", oceania, \"\\n\", \"South America=\", south_america )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:26:22.265623Z",
+     "start_time": "2020-10-27T19:26:22.260128Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Africa: 2190 \n",
+      " Asia: 1610 \n",
+      " Europe: 1820 \n",
+      " North America: 2140\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's create the variables for the other continents\n",
+    "africa =  congo + egypt + south_africa\n",
+    "asia = indonesia + israel + thailand\n",
+    "europe = spain + greece + iceland \n",
+    "north_america = canada + mexico + united_states\n",
+    "print(\" Africa:\", africa, \"\\n\", \"Asia:\", asia,  \"\\n\", \"Europe:\", europe, \"\\n\", \"North America:\", north_america)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -390,6 +518,35 @@
     "**Answer.**\n",
     "\n",
     "---------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:26:50.957817Z",
+     "start_time": "2020-10-27T19:26:50.949328Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peru: 879\n",
+      "Croatia: 125.5\n",
+      "\n",
+      "\n",
+      "1004.5 travelers went to Peru and Croatia last year\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Peru:\", peru)\n",
+    "print (\"Croatia:\", croatia)\n",
+    "print(\"\\n\")\n",
+    "print (peru + croatia, \"travelers went to Peru and Croatia last year\")\n"
    ]
   },
   {
@@ -578,11 +735,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-27T19:21:10.497251Z",
-     "start_time": "2020-10-27T19:21:10.493469Z"
+     "end_time": "2020-10-27T19:27:25.735482Z",
+     "start_time": "2020-10-27T19:27:25.730840Z"
     }
    },
    "outputs": [
@@ -590,14 +747,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "World Travelers 112235\n"
+      "112235\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "agency = \"World Travelers \"\n",
+    "# You can create a new variable that includes numbers as text.\n",
+    "agency = \"World Travelers\"\n",
     "agency_id = \"112235\"\n",
-    "print(agency + agency_id)"
+    "print(agency_id)\n",
+    "type(agency_id)"
    ]
   },
   {
