week2 cases added

--- a/case_0.2_student/case_0.2_student.ipynb
+++ b/case_0.2_student/case_0.2_student.ipynb
@@ -799,6 +799,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:27:47.464041Z",
+     "start_time": "2020-10-27T19:27:47.459050Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "112235\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agency_id = str(112235)\n",
+    "print(agency_id)\n",
+    "type(agency_id)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -985,6 +1019,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:28:12.985299Z",
+     "start_time": "2020-10-27T19:28:12.977956Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage underage, Egypt: 12.5\n",
+      "Percentage underage, USA: 20.0\n",
+      "Percentage underage, Spain: 14.94\n",
+      "Percentage underage, Indonesia: 8.61\n",
+      "Percentage underage, South Africa: 4.61\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can use the next formula: \n",
+    "percentage_underage_egypt = round(((150/egypt)*100),2)\n",
+    "print(\"Percentage underage, Egypt:\", percentage_underage_egypt)\n",
+    "percentage_underage_usa = round(((198/united_states)*100),2)\n",
+    "print(\"Percentage underage, USA:\", percentage_underage_usa)\n",
+    "percentage_underage_spain = round(((133/spain)*100),2)\n",
+    "print(\"Percentage underage, Spain:\", percentage_underage_spain)\n",
+    "percentage_underage_indonesia = round(((68/indonesia)*100),2)\n",
+    "print(\"Percentage underage, Indonesia:\", percentage_underage_indonesia)\n",
+    "percentage_underage_south_africa = round(((35/south_africa)*100),2)\n",
+    "print(\"Percentage underage, South Africa:\", percentage_underage_south_africa)\n",
+    "# Note that we use round to specify the number of decimals we want: round(your number,number of decimals)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1033,6 +1104,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:28:30.500278Z",
+     "start_time": "2020-10-27T19:28:30.496152Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1. Is the percentage of underage travelers in Egypt the same as in Spain?\n",
+    "percentage_underage_spain == percentage_underage_egypt\n",
+    "# 2. Is the percentage of underage travelers in the United States greater than the percentage of underage travelers in Indonesia?\n",
+    "percentage_underage_usa > percentage_underage_indonesia\n",
+    "# 3. Is the percentage of underage travelers in South Africa less than the percentage of underage travelers in Spain?\n",
+    "percentage_underage_south_africa < percentage_underage_spain\n",
+    "# 4. Find if the percentage of underage travelers in South Africa is different than the percentage of underage travelers in\n",
+    "# Indonesia by using != symbol.\n",
+    "percentage_underage_south_africa != percentage_underage_indonesia"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1068,6 +1172,32 @@
     "**Answer.**\n",
     "\n",
     "---------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-27T19:28:45.442965Z",
+     "start_time": "2020-10-27T19:28:45.439472Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1.\n",
+    "print(percentage_underage_south_africa > 4 and percentage_underage_indonesia < 10)\n",
+    "# 2.\n",
+    "print(percentage_underage_usa > 15 or percentage_underage_egypt > 40)"
    ]
   },
   {
