--- a/case_1.1_student/case_1.1_student.ipynb
+++ b/case_1.1_student/case_1.1_student.ipynb
@@ -527,9 +527,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-31T17:16:38.438580Z",
+     "start_time": "2020-10-31T17:16:38.434838Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.61, 0.65, 0.71]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "success_estimates['Jamaica'] "
    ]
@@ -543,8 +559,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-31T17:17:19.098924Z",
+     "start_time": "2020-10-31T17:17:19.096098Z"
+    }
+   },
    "outputs": [],
    "source": [
     "jamaica_list = success_estimates['Jamaica'] "
@@ -559,9 +580,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-31T17:17:23.676118Z",
+     "start_time": "2020-10-31T17:17:23.671717Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.61, 0.65, 0.71]\n"
+     ]
+    }
+   ],
    "source": [
     "print(jamaica_list)"
    ]
@@ -577,9 +611,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-31T17:17:29.620868Z",
+     "start_time": "2020-10-31T17:17:29.617654Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.61\n",
+      "0.65\n",
+      "0.71\n"
+     ]
+    }
+   ],
    "source": [
     "# Each successive print statement will print on a new line\n",
     "print(jamaica_list[0]) # prints the first element of the list\n",
@@ -667,6 +716,35 @@
     "\n",
     "----------"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-31T17:30:21.981131Z",
+     "start_time": "2020-10-31T17:30:21.975520Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(success_estimates['France']), len(success_estimates['Greece']), len(success_estimates['France']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
