--- a/case_1.1_student/case_1.1_student.ipynb
+++ b/case_1.1_student/case_1.1_student.ipynb
@@ -719,11 +719,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-31T17:30:21.981131Z",
-     "start_time": "2020-10-31T17:30:21.975520Z"
+     "end_time": "2020-10-31T17:30:42.244321Z",
+     "start_time": "2020-10-31T17:30:42.240228Z"
     }
    },
    "outputs": [
@@ -731,20 +731,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 4\n"
+      "4 6 1\n"
      ]
     }
    ],
    "source": [
-    "print(len(success_estimates['France']), len(success_estimates['Greece']), len(success_estimates['France']))"
+    "print(len(success_estimates['France']), len(success_estimates['Greece']), len(success_estimates['Morocco']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-31T17:36:31.216605Z",
+     "start_time": "2020-10-31T17:36:31.211093Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " - Estimates -\n",
+      " France\n",
+      " 4 \n",
+      " Greece\n",
+      " 6 \n",
+      " Morocco\n",
+      " 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\" - Estimates -\\n France\\n\", len(success_estimates['France']),\n",
+    "                    \"\\n Greece\\n\", len(success_estimates['Greece']),\n",
+    "                   \"\\n Morocco\\n\", len(success_estimates['Morocco'])\n",
+    "      )"
+   ]
   },
   {
    "cell_type": "markdown",
