--- a/case_1.1_student/case_1.1_student.ipynb
+++ b/case_1.1_student/case_1.1_student.ipynb
@@ -746,7 +746,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-31T17:36:31.216605Z",
      "start_time": "2020-10-31T17:36:31.211093Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -767,6 +768,18 @@
     "print(\" - Estimates -\\n France\\n\", len(success_estimates['France']),\n",
     "                    \"\\n Greece\\n\", len(success_estimates['Greece']),\n",
     "                   \"\\n Morocco\\n\", len(success_estimates['Morocco'])\n",
+    "      )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\" - Estimates -\\n\" France\\n\", len(success_estimates['France']),\n",
+    "                    \"\\n\" Greece\\n\", len(success_estimates['Greece']),\n",
+    "                   \"\\n \"Morocco\\n\", len(success_estimates['Morocco'])\n",
     "      )"
    ]
   },
@@ -967,9 +980,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-31T17:52:30.966249Z",
+     "start_time": "2020-10-31T17:52:30.963105Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Argentina', 'Australia', 'Brazil', 'Canada', 'Egypt', 'England', 'France', 'Germany', 'Greece', 'Italy', 'Jamaica', 'Morocco', 'Switzerland', 'Tunisia', 'USA']\n"
+     ]
+    }
+   ],
    "source": [
     "# Get all the keys from the success_estimates dictionary\n",
     "country_name_list = sorted(list(success_estimates.keys()))\n",
@@ -985,9 +1011,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-31T17:52:33.235917Z",
+     "start_time": "2020-10-31T17:52:33.226311Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = Argentina\n",
+      "Access value from dict success_estimates[i]:  [0.22]\n",
+      "Average of list from success_estimates[i]:  0.22\n",
+      "--Go to next iteration of loop--\n",
+      "\n",
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = Australia\n",
+      "Access value from dict success_estimates[i]:  [0.6, 0.33, 0.11, 0.14]\n",
+      "Average of list from success_estimates[i]:  0.29500000000000004\n",
+      "--Go to next iteration of loop--\n",
+      "\n",
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = Brazil\n",
+      "Access value from dict success_estimates[i]:  [0.22, 0.22, 0.43]\n",
+      "Average of list from success_estimates[i]:  0.29\n",
+      "--Go to next iteration of loop--\n",
+      "\n",
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = Canada\n",
+      "Access value from dict success_estimates[i]:  [0.25, 0.3]\n",
+      "Average of list from success_estimates[i]:  0.275\n",
+      "--Go to next iteration of loop--\n",
+      "\n",
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = Egypt\n",
+      "Access value from dict success_estimates[i]:  [0.99]\n",
+      "Average of list from success_estimates[i]:  0.99\n",
+      "--Go to next iteration of loop--\n",
+      "\n",
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = England\n",
+      "Access value from dict success_estimates[i]:  [0.45]\n",
+      "Average of list from success_estimates[i]:  0.45\n",
+      "--Go to next iteration of loop--\n",
+      "\n",
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = France\n",
+      "Access value from dict success_estimates[i]:  [0.66, 0.78, 0.98, 0.2]\n",
+      "Average of list from success_estimates[i]:  0.655\n",
+      "--Go to next iteration of loop--\n",
+      "\n",
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = Germany\n",
+      "Access value from dict success_estimates[i]:  [0.45, 0.49, 0.36]\n",
+      "Average of list from success_estimates[i]:  0.4333333333333333\n",
+      "--Go to next iteration of loop--\n",
+      "\n",
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = Greece\n",
+      "Access value from dict success_estimates[i]:  [0.45, 0.66, 0.75, 0.99, 0.15, 0.66]\n",
+      "Average of list from success_estimates[i]:  0.61\n",
+      "--Go to next iteration of loop--\n",
+      "\n",
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = Italy\n",
+      "Access value from dict success_estimates[i]:  [0.6]\n",
+      "Average of list from success_estimates[i]:  0.6\n",
+      "--Go to next iteration of loop--\n",
+      "\n",
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = Jamaica\n",
+      "Access value from dict success_estimates[i]:  [0.61, 0.65, 0.71]\n",
+      "Average of list from success_estimates[i]:  0.6566666666666666\n",
+      "--Go to next iteration of loop--\n",
+      "\n",
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = Morocco\n",
+      "Access value from dict success_estimates[i]:  [0.29]\n",
+      "Average of list from success_estimates[i]:  0.29\n",
+      "--Go to next iteration of loop--\n",
+      "\n",
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = Switzerland\n",
+      "Access value from dict success_estimates[i]:  [0.73, 0.86, 0.84, 0.51, 0.99]\n",
+      "Average of list from success_estimates[i]:  0.7859999999999999\n",
+      "--Go to next iteration of loop--\n",
+      "\n",
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = Tunisia\n",
+      "Access value from dict success_estimates[i]:  [0.68, 0.56]\n",
+      "Average of list from success_estimates[i]:  0.6200000000000001\n",
+      "--Go to next iteration of loop--\n",
+      "\n",
+      "--Begin one iteration of loop--\n",
+      "Element of country_name_list, placeholder i = USA\n",
+      "Access value from dict success_estimates[i]:  [0.2, 0.5, 0.3]\n",
+      "Average of list from success_estimates[i]:  0.3333333333333333\n",
+      "--Go to next iteration of loop--\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Loop through all countries and calculate their mean success estimate\n",
     "for i in country_name_list:\n",
@@ -1033,6 +1161,59 @@
     "**Answer.**\n",
     "\n",
     "----------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-31T17:54:31.053055Z",
+     "start_time": "2020-10-31T17:54:31.035042Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country Argentina Min:  0.22\n",
+      "Country Argentina Max:  0.22\n",
+      "Country Australia Min:  0.11\n",
+      "Country Australia Max:  0.6\n",
+      "Country Brazil Min:  0.22\n",
+      "Country Brazil Max:  0.43\n",
+      "Country Canada Min:  0.25\n",
+      "Country Canada Max:  0.3\n",
+      "Country Egypt Min:  0.99\n",
+      "Country Egypt Max:  0.99\n",
+      "Country England Min:  0.45\n",
+      "Country England Max:  0.45\n",
+      "Country France Min:  0.2\n",
+      "Country France Max:  0.98\n",
+      "Country Germany Min:  0.36\n",
+      "Country Germany Max:  0.49\n",
+      "Country Greece Min:  0.15\n",
+      "Country Greece Max:  0.99\n",
+      "Country Italy Min:  0.6\n",
+      "Country Italy Max:  0.6\n",
+      "Country Jamaica Min:  0.61\n",
+      "Country Jamaica Max:  0.71\n",
+      "Country Morocco Min:  0.29\n",
+      "Country Morocco Max:  0.29\n",
+      "Country Switzerland Min:  0.51\n",
+      "Country Switzerland Max:  0.99\n",
+      "Country Tunisia Min:  0.56\n",
+      "Country Tunisia Max:  0.68\n",
+      "Country USA Min:  0.2\n",
+      "Country USA Max:  0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for country in country_name_list:\n",
+    "    print (\"Country\", country, \"Min: \", min(success_estimates[country]))\n",
+    "    print (\"Country\", country, \"Max: \", max(success_estimates[country]))"
    ]
   },
   {
